# norenye

./: .gitignore  .pre-commit-config.yaml  .secretsignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
js/: cmd.js  conftest.js  http.js  norenye.js  norenye_config.js  norenye_utils.js
qjs/: .gitignore  Makefile  fs.js  process.js  qq1.js  querystring.js
scripts/: readme2tests.py
tests/: conftest.py  test_api.py
tests/nginx/: .gitignore  nginx.0.conf  nginx.1.conf  nginx.2.conf  nginx.conf  nginx.dbg.conf  nginx.def.conf  nginx.micro.conf  nginx.qjsapi.conf  nginx.rootapi.conf  nginx.splitapi.conf  norenye.1.json  norenye.2.json  norenye.dbg.json  norenye.def.json  norenye.json  norenye.notags.json  norenye.tags.json  once.sh  svc3.json  svc4.json  testapi200.sh  testapictl.sh  testapid.sh
tests/nginx/static/: selector.css
