[tool.poetry]
package-mode = false
name = "norenye"
authors = ["Michael Dubner <pywebmail@list.ru>"]
version = "0.0.2"
description = "Dependency tracking for tests"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-docker-tools = "^3.1.9"
pytest-nginx = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = ["investigate"]
# reuse_containers = true
addopts = "--reuse-containers -l"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
